<resources>
    <string name="app_name">Planificador</string>
    <string name="title_video">Vídeo</string>
    <string name="title_foto">Foto</string>

    <string name="title_main_activity">Planificador Semanal</string>
    <string name="title_hores_activity_entrada">Hora de entrada</string>
    <string name="title_hores_activity_salida">Hora de salida</string>
    <string name="title_temps_activity_noefect">Horas no efectivas</string>
    <string name="title_temps_activity_efect">Horas efectivas día</string>

    <string name="menu_done">Done</string>
    <string name="add_item">Add item</string>
    <string name="title_activity_show_foto">ShowFoto</string>
    <string name="title_activity_show_video">ShowVideo</string>
    <string name="error_foto">No es pot carregar la imatge</string>
    <string name="permission_error">Error, has d\'acceptar el permís per poder contitnuar</string>
    <string name="action_settings">Configuración</string>
    <string name="cargar_modelo">Cargar horario modelo</string>
    <string name="acerca_de">Acerca de PHS</string>
    <string name="ayuda">Ayuda</string>
    <string name="mostrar_finde">Mostrar/Ocultar fin de semana</string>

    <string name="config_crear_horario_model">Crear horario modelo</string>
    <string name="cofing_crear_horario_model_expl">Crea un horario modelo. Este será el horario base sobre el cual
        podrás realizar modificaciones para realizar tu planificación semanal</string>

    <string name="config_horas_semanal">Límite de horas semanales</string>
    <string name="config_horas_semanal_expl">Establece el máximo de horas semanales efectivas que quieres realizar</string>

    <string name="config_idioma">Idioma</string>
    <string name="config_idioma_expl">Establece el idioma de la aplicacion</string>


    <string name="titulo_intro_limHorasSem">Límite de horas semanales</string>
</resources>
