
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ramos.alvaro.horesajuntament2.MainActivity" >


    <item
        android:id="@+id/cargar"
        android:icon="@android:drawable/ic_menu_upload"
        android:orderInCategory="1"
        android:title="@string/cargar_modelo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mostar_finde"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="97"
        android:title="@string/mostrar_finde"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="98"
        app:showAsAction="never" />

    <item
        android:id="@+id/ayuda"
        android:orderInCategory="99"
        android:title="@string/ayuda"
        app:showAsAction="never" />

    <item
        android:id="@+id/acerca_de"
        android:orderInCategory="100"
        android:title="@string/acerca_de"
        app:showAsAction="never" />
</menu>


